@@ -754,21 +754,17 @@ argument_list|,
 name|operation
 argument_list|)
 expr_stmt|;
-name|byte
-index|[]
-name|processed
-init|=
-name|stateUpdateQueue
-operator|.
-name|remove
-argument_list|()
-decl_stmt|;
 name|workQueue
 operator|.
 name|offer
 argument_list|(
-name|processed
+name|head
 argument_list|)
+expr_stmt|;
+name|stateUpdateQueue
+operator|.
+name|remove
+argument_list|()
 expr_stmt|;
 name|head
 operator|=
